<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/register"
        tools:context="com.shadyshrimp.lab9_2.RegisterFragment">
    <TextView
            android:text="@string/str_header_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvHeaderRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="28sp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/str_login_username"
            android:ems="10"
            android:id="@+id/etUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeaderRegister"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/str_login_password"
            android:ems="10"
            android:id="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/etUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/str_login_repeat_password"
            android:ems="10"
            android:id="@+id/etConfirmPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/str_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btRegister"
            app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/str_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btBack"
            app:layout_constraintTop_toBottomOf="@+id/btRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>