<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/graph_main_navigation"
            app:startDestination="@id/programsFragment">

    <navigation android:id="@+id/userGraph"
                app:startDestination="@id/loginFragment">

        <fragment android:id="@+id/loginFragment"
                  android:name="com.shadyshrimp.lab9_2.LoginFragment"
                  android:label="@string/str_header_login"
                  tools:layout="@layout/fragment_login">
            <action android:id="@+id/action_loginFragment_to_registerFragment"
                    app:destination="@id/registerFragment" app:enterAnim="@anim/slide_in_right"
                    app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left"
                    app:popExitAnim="@anim/slide_out_right"
                    app:launchSingleTop="true"
                    app:popUpTo="@+id/loginFragment"
                    app:popUpToInclusive="true"/>
        </fragment>

        <fragment android:id="@+id/registerFragment"
                  android:name="com.shadyshrimp.lab9_2.RegisterFragment"
                  android:label="@string/str_register"
                  tools:layout="@layout/fragment_register">
            <action android:id="@+id/action_registerFragment_to_loginFragment"
                    app:destination="@id/loginFragment" app:enterAnim="@anim/slide_in_left"
                    app:exitAnim="@anim/slide_out_right" app:popEnterAnim="@anim/slide_in_right"
                    app:popExitAnim="@anim/slide_out_left"
                    app:launchSingleTop="true"
                    app:popUpTo="@+id/registerFragment"
                    app:popUpToInclusive="true"/>
        </fragment>

        <action android:id="@+id/action_global_programsFragment"
                app:destination="@id/programsFragment" app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"
                app:launchSingleTop="true"
                app:popUpTo="@+id/programsFragment"
                app:popUpToInclusive="true"/>
    </navigation>

    <fragment android:id="@+id/programsFragment"
              android:name="com.shadyshrimp.lab9_2.ProgramsFragment"
              android:label="@string/str_workout_programs"
              tools:layout="@layout/fragment_exercise_list">
        <action android:id="@+id/action_homeFragment_to_settingsFragment"
                app:destination="@id/settingsFragment" app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>
        <action android:id="@+id/action_exercises"
                app:destination="@id/exercisesFragment" app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment android:id="@+id/settingsFragment"
              android:name="com.shadyshrimp.lab9_2.SettingsFragment"
              android:label="@string/str_settings"
              tools:layout="@layout/fragment_settings"/>

    <fragment android:id="@+id/exercisesFragment"
              android:name="com.shadyshrimp.lab9_2.ExercisesFragment"
              android:label=""
              tools:layout="@layout/fragment_exercise_list">
        <action android:id="@+id/actionDetails"
                app:destination="@id/detailsFragment" app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>
        <argument android:name="Program" app:argType="com.shadyshrimp.lab9_2.program.Program"/>
    </fragment>

    <fragment android:id="@+id/detailsFragment"
              android:name="com.shadyshrimp.lab9_2.DetailsFragment"
              android:label=""
              tools:layout="@layout/fragment_exercise_details">
        <argument android:name="Exercise" app:argType="com.shadyshrimp.lab9_2.exercise.Exercise"/>
    </fragment>

</navigation>
